# GTOR-DAQ

./: .gitattributes  .gitignore  .gitmodules  AlaricTest  Array.java  CMakeLists.txt  README.md  Wire Color Legend  colin11.py  gui.py
0 Website/: index.html
0 Wireless Measurement Delivery/: client.py  server.py
00 Libraries/: CMakeLists.txt
00 Libraries/Arduino Libraries/DAQ_HX711/: Adafruit_HX711.cpp
00 Libraries/Arduino Libraries/libraries/ADS1256-main/examples/ADS1256-Example/: ADS1256-Example.ino
00 Libraries/Arduino Libraries/libraries/ADS1256-main/src/: ADS1256.cpp  ADS1256.h
00 Libraries/Arduino Libraries/libraries/Adafruit_BusIO/: Adafruit_I2CDevice.h
00 Libraries/Arduino Libraries/libraries/Adafruit_HX711/: Adafruit_HX711.h
00 Libraries/Arduino Libraries/libraries/BinaryBuffer/: .gitignore  CMakeLists.txt  README.md  library.properties  license.md
00 Libraries/Arduino Libraries/libraries/BinaryBuffer/example/: example.ino
00 Libraries/Arduino Libraries/libraries/BinaryBuffer/tests/: BinaryBuffer_unittest.cpp  CMakeLists.txt
00 Libraries/Arduino Libraries/libraries/BoostForArduino/: README.md  library.properties
00 Libraries/Arduino Libraries/libraries/BoostForArduino/src/: boost_algorithm_apply_permutation.hpp  boost_algorithm_find_backward.hpp  boost_algorithm_find_not.hpp  boost_algorithm_is_clamped.hpp  boost_any_bad_any_cast.hpp  boost_any_basic_any.hpp  boost_any_fwd.hpp  boost_any_unique_any.hpp  boost_asio_any_completion_executor.hpp  boost_asio_any_completion_handler.hpp  boost_asio_any_io_executor.hpp  boost_asio_append.hpp  boost_asio_as_tuple.hpp  boost_asio_associated_cancellation_slot.hpp  boost_asio_associated_immediate_executor.hpp  boost_asio_associator.hpp  boost_asio_awaitable.hpp  boost_asio_basic_file.hpp  boost_asio_basic_random_access_file.hpp  boost_asio_basic_readable_pipe.hpp  boost_asio_basic_stream_file.hpp  boost_asio_basic_writable_pipe.hpp  boost_asio_bind_allocator.hpp  boost_asio_bind_cancellation_slot.hpp  boost_asio_bind_immediate_executor.hpp  boost_asio_buffer_registration.hpp  boost_asio_cancel_after.hpp  boost_asio_cancel_at.hpp  boost_asio_cancellation_signal.hpp  boost_asio_cancellation_state.hpp  boost_asio_cancellation_type.hpp  boost_asio_co_composed.hpp  boost_asio_co_spawn.hpp  boost_asio_compose.hpp  boost_asio_composed.hpp  boost_asio_config.hpp  boost_asio_connect_pipe.hpp  boost_asio_consign.hpp  boost_asio_default_completion_token.hpp  boost_asio_deferred.hpp  (+1882 more)
00 Libraries/Arduino Libraries/libraries/CMBTL_DAQInfrastructure/: .gitignore  CMakeLists.txt  LICENSE  README.md  library.properties
00 Libraries/Arduino Libraries/libraries/CMBTL_DAQInfrastructure/Testing/: CMakeLists.txt  DAQInfrastructure_unittest.cpp  PacketEncodeDecode_unittest.cpp  SensorData_unittest.cpp
00 Libraries/Arduino Libraries/libraries/CMBTL_DAQInfrastructure/examples/SimpleCommunication/: SimpleCommunication.ino
00 Libraries/Arduino Libraries/libraries/CMBTL_DAQInfrastructure/src/: DAQPackets.h  DAQSensors.h
00 Libraries/Arduino Libraries/libraries/CMBTL_DAQInfrastructure/src/DAQPackets/: All_Packet.h
00 Libraries/Arduino Libraries/libraries/CMBTL_DAQInfrastructure/src/Sensors/: Analog_Sensor.h  CVT_temp.h  Linear_Analog_Sensor.h  RPM.h  RPM_Sensor.h  brake_pressure.h  brake_temp.h  clutch_engaged.h  linear_acceleration.h  microsec.h  pit_requested.h  position.h  sec.h  speed.h  steering_rotation.h  teensy_temp.h
00 Libraries/Arduino Libraries/libraries/CommboardTransmissionLibrary/: .gitignore  CMakeLists.txt  README.md  library.properties
00 Libraries/Arduino Libraries/libraries/CommboardTransmissionLibrary/Testing/: CMakeLists.txt  DAQInfrastructure_unittest.cpp  PacketEncodeDecode_unittest.cpp  SensorData_unittest.cpp  SensorInfo_unittest.cpp
00 Libraries/Arduino Libraries/libraries/CommboardTransmissionLibrary/examples/SimpleCommunication/: SimpleCommunication.ino
00 Libraries/Arduino Libraries/libraries/CommboardTransmissionLibrary/src/: SensorData.h  SensorInfo.h
00 Libraries/Arduino Libraries/libraries/CommboardTransmissionLibrary/src/DAQInfrastructure/: DAQSensors.h
00 Libraries/Arduino Libraries/libraries/CommboardTransmissionLibrary/src/Packets/: PacketIDMap.h  PacketInstructionsBuilder.h
00 Libraries/Arduino Libraries/libraries/DAQ_ADS1115/: ADS1115.h  DAQ_ADS1115.cpp  DAQ_ADS1115.h
00 Libraries/Arduino Libraries/libraries/DAQ_AMT22/: DAQ_AMT22.cpp
00 Libraries/Arduino Libraries/libraries/DAQ_LDS/: DAQ_LDS.h
00 Libraries/Arduino Libraries/libraries/DAQ_LDS_SENSOR/: DAQ_LDS_Sensor.cpp  DAQ_LDS_Sensor.h
00 Libraries/Arduino Libraries/libraries/DAQ_Linear_Analog_Sensor/: DAQ_Linear_Analog_Sensor.cpp  DAQ_Linear_Analog_Sensor.h
00 Libraries/Arduino Libraries/libraries/DAQ_RPM_SENSOR/: DAQ_RPM_Sensor.cpp  DAQ_RPM_Sensor.h
00 Libraries/Arduino Libraries/libraries/DAQ_StrainGauge/: library.properties
00 Libraries/Arduino Libraries/libraries/DAQ_StrainGauge/examples/ReadAnalog/: ReadAnalog.ino
00 Libraries/Arduino Libraries/libraries/teensy4_i2c-master/src/: i2c_driver_wire.h
00 Libraries/BinaryBuffer/: BinaryBuffer_unittest.cpp  CMakeLists.txt
00 Libraries/CommboardTransmissionLibrary/: CMakeLists.txt  MP.h  SensorData.h  SensorInfo.h
00 Libraries/CommboardTransmissionLibrary/DAQInfrastructure/: DAQPackets.h
00 Libraries/CommboardTransmissionLibrary/DAQInfrastructure/Sensors/: CVT_temp.h  RPM.h  brake_pressure.h  brake_temp.h  linear_acceleration.h  millisec.h  position.h  speed.h  steering_rotation.h
00 Libraries/CommboardTransmissionLibrary/Packets/: PacketIDMap.h  PacketInstructionsBuilder.h  PacketScheme.h
00 Libraries/CommboardTransmissionLibrary/Testing/: CMakeLists.txt  SensorInfo_unittest.cpp  SensorsTest
00 Libraries/DAQ_AMT22/: DAQ_AMT22.h
00 Libraries/teensy4_i2c-master/src/: i2c_driver_wire.cpp
12 CommboardTransmissionLibrary/Testing/: CMakeCache.txt  CMakeLists.txt  DAQInfrastructure_unittest.cpp  Makefile  PacketEncodeDecode_unittest.cpp  SensorDataTests  SensorData_unittest.cpp  SensorInfoTests  SensorInfo_unittest.cpp  SensorsTest
(+465 files in other folders)
